--- a/DailySnapApp/package.json
+++ b/DailySnapApp/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "dotenv": "^16.4.5",
     "expo": "~50.0.13",
+    "expo-camera": "~14.1.1",
+    "expo-constants": "~15.4.5",
+    "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
-    "react-native": "0.73.5",
-    "expo-constants": "~15.4.5"
+    "react-native": "0.73.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
