--- a/DailySnapApp/package.json
+++ b/DailySnapApp/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^1.22.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "dotenv": "^16.4.5",
     "expo": "~50.0.13",
     "expo-camera": "~14.1.1",
